# nlp-pcl

./: .gitattributes  .gitignore  README.md  dev.txt  outputs_only.tgz.sha256  pyproject.toml  requirements.txt  test.txt
configs/: smoke.yaml
data/: dev_df.csv  dev_df_2.csv  train_df.csv
legacy/notebooks/: 00_predict.ipynb  01_analysis.ipynb  train_model_with_t5_paraphase.ipynb
legacy/report/: kw_bin.csv  lvl_mean_std.csv  test.csv  test2.csv  text_length_bin.csv
scripts/: env_check.py  eval_dev_f1.py  llm_preprocess.py  predict.py  train_cv.py
src/pcl_exercise/: __init__.py  config.py  data.py  metrics.py  modeling.py  training.py  utils.py
