[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcl-exercise"
version = "0.1.0"
description = "Stage 3 binary PCL classification (CV + OOF threshold + optional auxiliary categories)."
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
